@@ -1,5 +1,6 @@
 0.14.11
 	bugfix: rackspace allocation was broken by magic_quotes fix
+	bugfix: don't generate error messages by accessing _GET array
 0.14.10 2008-02-01
 	bugfix: avoid hitting GET limit on object and rack update
 	bugfix: sticker reset icon did not work sometimes
